--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>P_Saimon_p</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="typ.css">
-    <link rel="stylesheet" href="style/normalize.css">
-    <link rel="stylesheet" href="responsive.css">
-    
+    <link rel="stylesheet" href="./styles/normalize.css" type="text/css">
+    <link rel="stylesheet" href="./styles/typ.css" type="text/css">
+    <link rel="stylesheet" href="./styles/responsive.css" type="text/css">
+
 </head>
 
 <body>
@@ -61,7 +61,7 @@
     </header>
 
 
-    <script src="bagg.js"></script>
+    <script src="./js/bagg.js"></script>
 
     <div class="video position-relative">
         <video autoplay muted loop id="myVideo">
@@ -207,9 +207,9 @@
             </div>
         </div>
     </div>
-    <script src='link01.js'></script>
-    <script src='link02.js'></script>
-    <script src="slider.js"></script>
+    <script src='./js/link01.js'></script>
+    <script src='./js/link02.js'></script>
+    <script src="./js/slider.js"></script>
 
     <div class="lid">
 
@@ -347,7 +347,7 @@
 
     </div>
 
-   <script src="cata.js"></script>
+   <script src="./js/cata.js"></script>
     
 
    <footer>
